--- a/PML_project.Rmd
+++ b/PML_project.Rmd
@@ -2,12 +2,7 @@
 title: 'Practical Machine Learning Project: Weight Lifting Excercise Dataset '
 author: "JenBru"
 date: "April 26, 2016"
-output:
-  html_document: default
-  fig_width: 5
-  pdf_document: null
-fontsize: 10pt
-fig_height: 3
+output: html_document
 ---
     
 ## Executive Summary    
